<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginStart="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginEnd="30dp"
    android:layout_marginRight="30dp"
    android:orientation="horizontal"
    android:weightSum="1"
    android:background="@color/bgColor">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/excellent_new" />

        <TextView
            android:id="@+id/tv_excellent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/excellent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/good_new" />

        <TextView
            android:id="@+id/tv_good"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/good" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/fair_new" />

        <TextView
            android:id="@+id/tv_fair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/fair" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:src="@drawable/weak_new" />

        <TextView
            android:id="@+id/tv_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/weak" />

    </LinearLayout>
</LinearLayout>